--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 main{
     width: 100%;
     height: 100vh;
-    background-color: #949398FF;
+    background-color: #feeace;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,10 +20,10 @@ main{
 .box{
     width: 600px;
     min-height: 500px;
-    background-color: #F4DF4EFF;
+    background-color: #FC766AFF;
     border-radius: 10px;
     padding: 15px;
-    box-shadow: 5px 8px 15px gray;
+    box-shadow: 1px 1px 10px gray;
 }
 #item{
     display: block;
@@ -32,7 +32,7 @@ main{
     font-size: 20px;
     border: 0;
     border-radius: 10px;
-    box-shadow: 0px 2px 3px gray;
+    box-shadow: 0px 1px 5px gray;
     font-weight: bold;
     outline: 0;
 }
@@ -42,14 +42,16 @@ main{
 }
 #to-do-box li{
     position: relative;
-    background-color:rgba(255, 0, 170, 0.473);
+    background-color: #febbb5;
     padding: 10px;
-    color: white;
+    color: black;
     border-radius: 10px;
     padding-right: 30px;
     text-align: justify;
     margin-top: 10px;
     user-select: none;
+    box-shadow: 0px 1px 5px gray;
+
 
 }
 #to-do-box li i{
@@ -60,5 +62,5 @@ main{
 .done{
     text-decoration: line-through;
     color: black;
-    background-color: lightpink !important;
+    background-color: #fed2ce !important;
 }
