--- a/style.css
+++ b/style.css
@@ -3,38 +3,28 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: 'Tilt Neon', cursive;
-    background-color: #feeace;
-    
-    
+    font-family: 'Tilt Neon', cursive;   
 }
 
-main{
-    width: 100%;
-    height: 100vh;
-    background-color: #feeace;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-}
 
 .box-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    background-color: #feeace;
+    padding-top: 20px;
+    background-color: #febbb5;
+    padding-bottom: 91px;
 }
 
 .box{
     width: 600px;
-    min-height: 500px;
+    min-height: 600px;
     background-color: #FC766AFF;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 1px 1px 10px gray;
+
+    
 }
 #item{
     display: block;
@@ -46,10 +36,12 @@ main{
     box-shadow: 0px 1px 5px gray;
     font-weight: bold;
     outline: 0;
+    background-color: #febbb5;
 }
 #to-do-box{
-    margin-top: 20px;
+    padding-top: 20px;
     list-style: none;
+    
 }
 #to-do-box li{
     position: relative;
@@ -77,14 +69,14 @@ main{
 }
 
 .time-show{
+    background-color: #febbb5;
+    padding-top: 20px;
     font-size: 30px;
-    background-color: #FC766AFF ;
     padding: 10px;
     text-align: center;
-    box-shadow: 1px 1px 10px gray;
     font-family: 'Tilt Neon', cursive;
     font-weight: bold;
-    color: white;
+    color: black;
     width: auto;
     display: flex;
     align-items: center;
@@ -101,7 +93,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:  #feeace;
+    background-color: #febbb5;
     padding-top: 30px;
 }
 
@@ -110,10 +102,9 @@ main{
     text-align: center;
     font-family: 'Tilt Neon', cursive;
 }
-.auther{
-    font-size: 10px;
-}
-
 .quote{
     font-size: 30px;
+}
+#btn{
+    margin-top: 30px;
 }
